# NyxosClient

./: .prettierrc  index.html  package.json  tsconfig.json  vite.config.ts
app/: App.tsx  dbApp.tsx  global.d.ts  globals.scss  httpsApp.tsx  login.tsx  main.tsx  root.tsx  routers.tsx  routes.ts  window.ts
app/Layout/: header.tsx
app/assets/: AlphaVideo.js
app/assets/douyin/: A_Bogus_16X.js  __ac_signature.js
app/common/: api.ts
app/components/BaseWebsocketAdmin/: Advertisement.tsx  CardLiveMoom.tsx  ListLiveMoom.tsx  UpdateLive.tsx  index.tsx  search.tsx  types.d.ts  types.ts  windwos.ts
app/db/: WebSocketdDB.ts  db_views.ts  utils.ts
app/db/douyin/: index.ts  message.ts
app/hook/: useAutoScrollToBottom.tsx  useDelayStack.ts.ts
app/pages/: home.tsx
app/pages/douyin/: DanmeFenxi.tsx  GiftMessageConent.tsx  GiftVideo.tsx  GiiftFenxi.tsx  MessageConent.tsx  class.ts  home.tsx  message.ts  sole.tsx  urls.ts
app/pages/douyin/Gift/: gift.json
app/pages/douyin/api/: base.ts  cookie.ts  gift.ts
app/pages/douyin/message/: index.ts
app/pages/douyin/url_params/: index.ts  (+1 more)
app/theme/: adtd.ts
app/types/: WebSocketdDB.ts
app/utils/: index.ts  listen.ts  request.ts  websocket.ts
src/: App.tsx  login.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/protos/: dy.proto
src-tauri/src/: db.rs  https.rs  lib.rs  main.rs  proto.rs  websocket_manager.rs  window.rs
src-tauri/src/douyin/: websocket.rs
src-tauri/src/douyin/live/: message.rs  mod.rs  on_messages.rs  process.rs  webs.rs  websocket.rs
