[package]
name = "nyxosclient"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nyxosclient_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build = "0.12.3"

[dependencies]
tauri = { version = "2", features = [] }
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
    'blocking',
    'cookies',
] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.15.0", features = ["rustls-tls"] }
futures = "0.3"
futures-util = "0.3" # 添加此依赖
prost = "0.12.3"
flate2 = "1.0"
anyhow = "1.0"
